--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,5 +48,5 @@ jobs:
     - name: Commit and push changes
       uses: devops-infra/action-commit-push@v0.3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        gt_token: ${{ secrets.GT_TOKEN }}
         commit_message: Version updated
