--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
+      
 
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
@@ -32,6 +33,7 @@ jobs:
         ECR_REPOSITORY: gitops-argocd
 
       run: |
+        echo aws s3 ls
         # Build a docker container and push it to ECR
         git_hash=$(git rev-parse --short "$GITHUB_SHA")
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash .
