--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,12 @@ jobs:
           git_hash=$(git rev-parse --short "$GITHUB_SHA")
           version=$(cat ./charts/helm-example/values.yaml | grep version: | awk '{print $2}')
           sed -i "s/$version/${GITHUB_REF##*/}-$git_hash/" ./charts/helm-example/values.yaml
-          
+    - name: Print GitHub Token
+      run: echo ${{ secrets.GITHUB_TOKEN }}
+    
+    - name: List files in the repository
+      run: ls -R
+
     - name: Commit and push changes
       uses: devops-infra/action-commit-push@v0.9.2
       with:
