--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
           version=$(cat ./charts/helm-example/values.yaml | grep version: | awk '{print $2}')
           sed -i "s/$version/${GITHUB_REF##*/}-$git_hash/" ./charts/helm-example/values.yaml
     - name: Print GitHub Token
-      run: echo ${{ secrets.GITHUB_TOKEN }}
+      run: echo ${{ secrets.GT_TOKEN }}
     
     - name: List files in the repository
       run: ls -R
