--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,10 @@ name: Deploy to Argocd
 
 on:
   push:
-    branches:
-      master:
-        - sreenath361
-        - github-actions[bot]
-    
+    branches: [ master ]
+    users:
+      - sreenath361
+      - github-actions[bot]
 jobs:
   build:
     name: Build and Pushing the Image
