--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
       run: |
         ls -R
         ls -al
-        git remove -v
+        git remote -v
         git status
         pwd
 
