--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,5 +57,5 @@ jobs:
     - name: Commit and push changes
       uses: devops-infra/action-commit-push@v0.9.2
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.GT_TOKEN }}
         commit_message: Version updated
