--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,9 @@ jobs:
         pwd
 
     - name: Commit and push changes
-      uses: devops-infra/action-commit-push@v0.9.2
+      uses: devops-infra/action-commit-push@master
       with:
         github_token: ${{ secrets.GT_TOKEN }}
+        add_timestamp: true
+        commit_prefix: "[AUTO]"
         commit_message: Version updated
