--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
     - name: Commit and push changes
       uses: devops-infra/action-commit-push@master
       with:
-        github_token: ${{ secrets.GT_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         add_timestamp: true
         commit_prefix: "[AUTO]"
         commit_message: Version updated
